fixing feature box shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -184,7 +184,7 @@ nav {
   width: 100%;
   max-width: 100vw;
   height: auto;
-  min-height: 5vh;
+  min-height: 2vh;
   padding: 0.5em 1em;
   display: flex;
   align-items: center;
@@ -235,6 +235,9 @@ nav ul li a {
   color: white;
   font-weight: bold;
   font-size: 1.2vw;
+  width: 100%;
+  height: auto;
+  min-height: 1vh;
 
 }
 
@@ -256,7 +259,7 @@ nav ul li :hover {
   width: 100%;
   height: auto;
   object-fit: cover;
-  aspect-ratio: 2.73;
+  aspect-ratio: 2.618 / 1;
 }
 
 .nav-icon-container {
@@ -299,10 +302,11 @@ nav ul li :hover {
 
 .menu-toggle {
   display: flex;
-  width: auto;
+  align-items: center;
+  width: 5vw;
   max-width: 6vw;
-  height: 6vh;
-  min-height: 1vh;
+  height: auto;
+
 }
 
 .menu-toggle img {
@@ -310,6 +314,7 @@ nav ul li :hover {
   height: auto;
   aspect-ratio: 1 / 1;
   object-fit: cover;
+  min-height: 1vh;
 }
 
 .hero-section {
@@ -1692,9 +1697,8 @@ figcaption {
 
   .menu-toggle {
     display: flex;
-    width: auto;
-    max-height: 8vw;
-    height: 5vh;
+    width: 8vw;
+    height: auto;
     min-height: 1vh;
     margin-right: 2em;
   }
@@ -2137,6 +2141,7 @@ figcaption {
     position: fixed;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     width: 100%;
     height: auto;
     min-height: 1vh;
@@ -2189,6 +2194,8 @@ figcaption {
 
   .logo-container img {
     width: 100%;
+    max-width: 100vw;
+    min-height: 1vh;
     height: auto;
     object-fit: cover;
     aspect-ratio: 2.73 / 1;
@@ -2199,7 +2206,6 @@ figcaption {
     width: 90%;
     max-width: 90vw;
     min-height: 2vh;
-
   }
 
   .categories-grid {
@@ -2364,15 +2370,19 @@ figcaption {
   }
 
   .menu-toggle {
-    width: 40px;
+    display: flex;
+    width: 6vw;
+    max-width: 10vw;
     height: auto;
+    min-height: 1vh;
+    margin-right: 0;
   }
 
   .menu-toggle img {
     width: 100%;
     height: auto;
     aspect-ratio: 1 / 1;
-    margin-right: 2em;
+    object-fit: cover;
   }
 
 }
@@ -2457,9 +2467,8 @@ figcaption {
 
   .menu-toggle {
     display: flex;
-    width: auto;
-    max-height: 6vw;
-    height: 4vh;
+    width: 6vw;
+    height: auto;
     min-height: 1vh;
     margin-right: 0;
   }
